--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "morse-react-mixins",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Useful react mixins",
   "main": "index.js",
   "scripts": {
@@ -32,10 +32,28 @@
     "url": "https://github.com/djforth/morse-react-mixins/issues"
   },
   "homepage": "https://github.com/djforth/morse-react-mixins#readme",
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
+    ]
+  },
   "devDependencies": {
-    "babel": "^5.8.9",
-    "babel-eslint": "^4.0.5",
-    "babelify": "^6.1.3",
+    "babel": "^6.0.15",
+    "babel-cli": "^6.0.15",
+    "babel-eslint": "^4.1.3",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "babelify": "^7.2.0",
     "bower": "^1.4.1",
     "browserify": "^11.0.0",
     "eslint": "^0.24.1",
