--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "morse-react-mixins",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Useful react mixins",
   "main": "index.js",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
   "scripts": {
-    "build": "babel  -x '.js' --source-maps --stage 0 src -d lib",
-    "build:watch": "babel  -x '.js' -w --source-maps --stage 0 src -d lib",
+    "build": "babel src -x '.js' --source-maps  -d lib",
+    "build:watch": "babel  -x '.js' -w --source-maps src -d lib",
     "lint": "eslint src/**",
     "lint:tests": "eslint spec/**",
     "test": "npm run lint && ./node_modules/.bin/karma start --browsers PhantomJS --single-run",
@@ -46,16 +52,16 @@
     ]
   },
   "devDependencies": {
-    "babel": "^6.0.15",
-    "babel-cli": "^6.0.15",
-    "babel-eslint": "^4.1.3",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel": "^6.1.18",
+    "babel-cli": "^6.2.0",
+    "babel-eslint": "^4.1.5",
+    "babel-polyfill": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "babelify": "^7.2.0",
     "bower": "^1.4.1",
-    "browserify": "^11.0.0",
+    "browserify": "^12.0.1",
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^3.0.0",
     "jasmine-core": "^2.3.4",
@@ -73,13 +79,13 @@
     "karma-story-reporter": "^0.3.1",
     "phantomjs": "^1.9.17",
     "react-tools": "^0.13.3",
-    "rewireify": "^0.2.2",
+    "rewireify": "^0.2.5",
     "sinon": "^1.15.4",
     "uglifyify": "^3.0.1",
-    "watchify": "^3.3.0"
+    "watchify": "^3.6.1"
   },
   "dependencies": {
-    "classnames": "^2.1.3",
-    "lodash": "^3.10.0"
+    "classnames": "^2.2.0",
+    "lodash": "^3.10.1"
   }
 }
