--- a/package.json
+++ b/package.json
@@ -73,11 +73,11 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-ievms": "0.0.4",
     "karma-jasmine": "^0.3.6",
-    "karma-opera-launcher": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-safari-launcher": "^0.1.1",
     "karma-story-reporter": "^0.3.1",
     "phantomjs": "^1.9.17",
+    "react-jasmine": "git://github.com/djforth/react-jasmine.git",
     "react-tools": "^0.13.3",
     "rewireify": "^0.2.5",
     "sinon": "^1.15.4",
