--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "morse-react-mixins",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Useful react mixins",
   "main": "index.js",
   "babel": {
@@ -86,6 +86,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.0",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
