--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   "dependencies": {
     "classnames": "^2.2.0",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "0.14.3",
+    "react-dom": "0.14.3"
   }
 }
