--- a/package.json
+++ b/package.json
@@ -68,10 +68,6 @@
     "karma": "^0.13.3",
     "karma-browserify": "^4.2.1",
     "karma-chrome-launcher": "^0.2.0",
-    "karma-coverage": "^0.4.2",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-ievms": "0.0.4",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-safari-launcher": "^0.1.1",
@@ -85,9 +81,9 @@
     "uglifyify": "^3.0.1",
     "watchify": "^3.6.1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "classnames": "^2.2.0",
-    "lodash": "^3.10.1",
+    "lodash": "^4.3.0",
     "react": "0.14.3",
     "react-dom": "0.14.3"
   }
