--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-safari-launcher": "^0.1.1",
     "karma-story-reporter": "^0.3.1",
+    "lodash": "^4.3.0",
     "phantomjs": "^1.9.17",
     "react-addons-test-utils": "0.14.3",
     "react-jasmine": "0.1.6",
