--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
       "react"
     ]
   },
+  "assets": {
+    "assets_in": "./src",
+    "assets_out": "./lib",
+    "karma": {
+      "input": "./spec"
+    }
+  },
   "scripts": {
     "build": "babel src -x '.js'  -d lib",
     "build:watch": "babel  -x '.js' -w --source-maps src -d lib",
     "lint": "eslint src/**",
     "lint:tests": "eslint spec/**",
-    "test": "npm run lint && ./node_modules/.bin/karma start --browsers PhantomJS --single-run",
+    "test": "npm run lint && asset-pipeline-karma",
     "test:watch": "karma start --browsers PhantomJS",
     "test:ie9": "karma start --single-run --browsers \"IE9 - Win7\"",
     "test:ie10": "karma start --single-run --browsers \"IE10 - Win7\"",
@@ -52,40 +59,29 @@
     ]
   },
   "devDependencies": {
-    "babel": "^6.1.18",
-    "babel-cli": "^6.2.0",
-    "babel-eslint": "^4.1.5",
-    "babel-polyfill": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
+    "@djforth/ap_karma": "1.1.9",
+    "@djforth/ap_utils": "^2.0.13",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-eslint": "^6.0.2",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
     "babelify": "^7.2.0",
-    "bower": "^1.4.1",
-    "browserify": "^12.0.1",
-    "eslint": "^0.24.1",
-    "eslint-plugin-react": "^3.0.0",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.3",
-    "karma-browserify": "^4.2.1",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-story-reporter": "^0.3.1",
-    "lodash": "^4.6.0",
-    "phantomjs": "^1.9.17",
-    "react-addons-test-utils": "0.14.3",
-    "react-jasmine": "0.1.6",
-    "react-tools": "^0.13.3",
-    "rewireify": "^0.2.5",
-    "sinon": "^1.15.4",
-    "uglifyify": "^3.0.1",
-    "watchify": "^3.6.1"
+    "classnames": "^2.2.0",
+    "eslint": "^2.3.0",
+    "eslint-config-google": "^0.4.0",
+    "eslint-plugin-react": "^4.2.3",
+    "lodash": "~4.8.2",
+    "react-addons-test-utils": "~0.14.8",
+    "react-jasmine": "~1.0.0",
+    "react": "~0.14.8",
+    "react-dom": "~0.14.8"
   },
   "peerDependencies": {
     "classnames": "^2.2.0",
-    "lodash": "^4.6.0",
-    "react": "0.14.3",
-    "react-dom": "0.14.3"
+    "lodash": "^4.8.2",
+    "react": "~0.14.8",
+    "react-dom": "~0.14.8"
   }
 }
