--- a/package.json
+++ b/package.json
@@ -57,29 +57,29 @@
     ]
   },
   "devDependencies": {
-    "@djforth/ap_karma": "1.1.9",
-    "@djforth/ap_utils": "^2.0.13",
+    "@djforth/ap_karma": "1.4.1",
+    "@djforth/ap_utils": "^2.1.1",
+    "@djforth/react-jasmine": "~1.2.1",
     "babel": "^6.5.2",
-    "babel-cli": "^6.6.5",
-    "babel-eslint": "^6.0.2",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.1.18",
-    "babelify": "^7.2.0",
-    "classnames": "^2.2.0",
-    "eslint": "^2.3.0",
-    "eslint-config-google": "^0.4.0",
-    "eslint-plugin-react": "^4.2.3",
-    "lodash": "~4.8.2",
-    "react-addons-test-utils": "~15.0.0",
-    "react-jasmine": "~1.1.0",
-    "react": "~15.0.0",
-    "react-dom": "~15.0.0"
+    "babel-cli": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
+    "classnames": "^2.2.5",
+    "eslint": "^3.2.2",
+    "eslint-config-google": "^0.6.0",
+    "eslint-plugin-react": "^6.0.0",
+    "lodash": "~4.14.1",
+    "react-addons-test-utils": "~15.3.0",
+    "react": "~15.3.0",
+    "react-dom": "~15.3.0"
   },
   "peerDependencies": {
-    "classnames": "^2.2.0",
-    "lodash": "^4.8.2",
-    "react": "~15.0.0",
-    "react-dom": "~15.0.0"
+    "classnames": "^2.*.*",
+    "lodash": "^4.*.*",
+    "react": "~15.3.*",
+    "react-dom": "~15.3.*"
   }
 }
