--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
   "name": "morse-react-mixins",
-  "version": "1.2.1",
+  "version": "2.0.0",
   "description": "Useful react mixins",
   "main": "index.js",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
-  },
-  "assets": {
-    "assets_in": "./src",
-    "assets_out": "./lib",
-    "karma": {
-      "input": "./spec"
-    }
+  "repository": "git@github.com:djforth/morse-react-mixins.git",
+  "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@djforth/ap_karma_wp": "^1.0.4",
+    "@djforth/ap_utils": "^3.0.1",
+    "@djforth/react-jasmine-wp": "^1.2.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-lodash": "^3.2.10",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-template": "^6.16.0",
+    "babel-types": "^6.19.0",
+    "classnames": "^2.2.5",
+    "eslint": "^3.10.2",
+    "eslint-config-google": "^0.7.0",
+    "eslint-config-morsedigital": "^1.1.0",
+    "jasmine-core": "^2.5.2",
+    "lodash": "^4.17.2",
+    "react": "^15.4.0",
+    "react-addons-test-utils": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
     "build": "babel src -x '.js'  -d lib",
@@ -25,61 +43,10 @@
     "test:watch": "asset-pipeline-karma -w",
     "test:mac": "asset-pipeline-karma -b"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/djforth/morse-react-mixins.git"
-  },
-  "keywords": [
-    "Text",
-    "and",
-    "CSS",
-    "mixins",
-    "for",
-    "react"
-  ],
-  "author": "A Stainforth",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/djforth/morse-react-mixins/issues"
-  },
-  "homepage": "https://github.com/djforth/morse-react-mixins#readme",
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015",
-            "react"
-          ]
-        }
-      ]
-    ]
-  },
-  "devDependencies": {
-    "@djforth/ap_karma": "1.4.1",
-    "@djforth/ap_utils": "^2.1.1",
-    "@djforth/react-jasmine": "~1.2.1",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "classnames": "^2.2.5",
-    "eslint": "^3.2.2",
-    "eslint-config-google": "^0.6.0",
-    "eslint-plugin-react": "^6.0.0",
-    "lodash": "~4.14.1",
-    "react-addons-test-utils": "~15.3.0",
-    "react": "~15.3.0",
-    "react-dom": "~15.3.0"
-  },
   "peerDependencies": {
-    "classnames": "^2.*.*",
-    "lodash": "^4.*.*",
-    "react": "~15.3.*",
-    "react-dom": "~15.3.*"
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.2",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0"
   }
 }
