--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,53 @@
 {
-  "plugins": [
-    "add-module-exports"
-  ],
-  "presets": [
-    "es2015",
-    "es2016",
-    "es2017",
-    "react"
-  ]
+  "presets": [],
+  "env": {
+    "production": {
+      "plugins": [
+        "lodash",
+        "add-module-exports"
+      ]
+      , "presets": [
+        ["env", {
+          modules: "umd",
+          "targets": {
+              'node': 4,
+              "browsers": [
+                "last 2 versions",
+                "chrome >= 55",
+                "IE >= 11"
+              ]
+            }
+        }]
+        , ["minify", {mangle:false}]
+      ]
+    },
+    "test": {
+      "plugins": [
+        [
+          "istanbul",
+          {
+            "exclude": [
+              "**/*_spec.js"
+            ]
+          }
+        ],
+        "rewire"
+      ],
+      "presets": [
+        ["es2015", {"modules": false}],
+        ["env", {
+          modules: false,
+          "targets": {
+              'node': 4,
+              "browsers": [
+                "last 2 versions",
+                "chrome >= 55",
+                "IE >= 11",
+                "phantomjs >= 2"
+              ]
+            }
+        }]
+      ]
+    }
+  }
 }
