--- a/package.json
+++ b/package.json
@@ -7,46 +7,49 @@
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@djforth/ap_karma_wp": "^1.0.4",
-    "@djforth/ap_utils": "^3.0.1",
+    "@djforth/ap_karma_wp": "^3.0.2",
+    "@djforth/ap_utils": "^3.1.2",
     "@djforth/react-jasmine-wp": "^1.2.0",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.10",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-preset-es2017": "^6.16.0",
-    "babel-template": "^6.16.0",
-    "babel-types": "^6.19.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-minify": "^0.2.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-template": "^6.26.0",
+    "babel-types": "^6.26.0",
     "classnames": "^2.2.5",
-    "eslint": "^3.10.2",
-    "eslint-config-google": "^0.7.0",
-    "eslint-config-morsedigital": "^1.1.0",
-    "jasmine-core": "^2.5.2",
-    "lodash": "^4.17.2",
-    "react": "^15.4.0",
-    "react-addons-test-utils": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "eslint": "^4.8.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
+    "jasmine-core": "^2.8.0",
+    "lodash": "^4.17.4",
+    "prettier-eslint": "^8.2.0",
+    "react": "^16.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.0.0",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "scripts": {
     "build": "babel src -x '.js'  -d lib",
     "build:watch": "babel  -x '.js' -w --source-maps src -d lib",
-    "lint": "eslint src/**",
-    "lint:tests": "eslint spec/**",
+    "lint": "eslint src/** --fix",
+    "lint:tests": "eslint spec/** --fix",
     "test": "npm run lint && asset-pipeline-karma",
     "test:watch": "asset-pipeline-karma -w",
     "test:mac": "asset-pipeline-karma -b"
   },
-  "peerDependencies": {
+  "dependencies": {
     "classnames": "^2.2.5",
-    "lodash": "^4.17.2",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "lodash": "^4.17.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
