--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "webpack-dev-server": "^2.9.1"
   },
   "scripts": {
-    "build": "babel src -x '.js'  -d lib",
-    "build:watch": "babel  -x '.js' -w --source-maps src -d lib",
+    "build": "NODE_ENV=production babel src -x '.js'  -d lib --source-maps",
+    "build:watch": "NODE_ENV=production babel  -x '.js' -w --source-maps src -d lib",
     "lint": "eslint src/** --fix",
     "lint:tests": "eslint spec/** --fix",
     "test": "npm run lint && asset-pipeline-karma",
