--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "morse-react-mixins",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Useful react mixins",
-  "main": "index.js",
+  "main": "libs/index.js",
   "repository": "git@github.com:djforth/morse-react-mixins.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
@@ -16,15 +16,15 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-minify": "^0.2.0",
-    "babel-polyfill": "^6.26.0",
     "babel-template": "^6.26.0",
     "babel-types": "^6.26.0",
     "classnames": "^2.2.5",
     "eslint": "^4.8.0",
-    "eslint-config-prettier": "^2.6.0",
     "eslint-config-google": "^0.9.1",
+    "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
