--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "morse-react-mixins",
   "version": "2.1.2",
   "description": "Useful react mixins",
-  "main": "libs/index.js",
+  "main": "lib/index.js",
   "repository": "git@github.com:djforth/morse-react-mixins.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
