--- a/package.json
+++ b/package.json
@@ -1,55 +1,46 @@
 {
   "name": "morse-react-mixins",
-  "version": "2.1.4",
+  "version": "3.0.0",
   "description": "Useful react mixins",
   "main": "lib/index.js",
   "repository": "git@github.com:djforth/morse-react-mixins.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@djforth/ap_karma_wp": "^3.0.2",
-    "@djforth/ap_utils": "^3.1.2",
-    "@djforth/react-jasmine-wp": "^1.3.3",
+    "@djforth/jest-matchers": "1.5.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-rewire": "^1.1.0",
+    "babel-plugin-rewire-ignore-coverage": "^2.0.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-minify": "^0.2.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.3.0",
     "babel-template": "^6.26.0",
     "babel-types": "^6.26.0",
-    "classnames": "^2.2.5",
-    "eslint": "^4.8.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.4.0",
-    "jasmine-core": "^2.8.0",
-    "lodash": "^4.17.4",
-    "prettier-eslint": "^8.2.0",
-    "react": "^16.0.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "eslint": "^4.18.1",
+    "eslint-config-morsedigital-prettier": "^1.2.2",
+    "jest": "^22.4.2",
+    "rollup": "^0.56.3",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "scripts": {
-    "build": "NODE_ENV=production babel src -x '.js'  -d lib --source-maps",
-    "build:watch": "NODE_ENV=production babel  -x '.js' -w --source-maps src -d lib",
+    "build": "NODE_ENV=production rollup -c",
+    "build:watch": "NODE_ENV=production rollup -c -w",
     "lint": "eslint src/** --fix",
     "lint:tests": "eslint spec/** --fix",
-    "test": "npm run lint && asset-pipeline-karma",
-    "test:watch": "asset-pipeline-karma -w",
-    "test:mac": "asset-pipeline-karma -b"
+    "test": "jest --coverage --config jest.config.json",
+    "test:watch": "jest --watch --config jest.config.json"
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "lodash": "^4.17.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "lodash": "^4.17.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
